# firewall-test-task

./: CMakeLists.txt  README.md  firewall.c  rand_pack_gen.c  rules.c  rules.h  run_tests.sh
.github/workflows/: cmake-single-platform.yml  run_tests.yml
rulesets/: ruleset_1.txt  ruleset_2.txt
test/: expected_output_1.txt  expected_output_2.txt  packets_1.txt  packets_2.txt
